# affine-invariant-rust

./: .gitignore  Cargo.toml  pyproject.toml
python/: data.ipynb  data.py  gravity.ipynb  test-line.ipynb  w.csv  z.csv
python/MCMC/: __init__.py  mcmc.py  utils.py
python/MCMC/dm/: gravity.ipynb  lognu_dm.ipynb
python/dddm/: data2.ipynb  lognu_dm.ipynb  tes.py
python/dm/: data.py  data1-dddm.ipynb  data1-dddm.py  data1.py  data2.py  gravity.ipynb  lognu_dm.ipynb
python/dm/data/: w1.csv  w2.csv  z1.csv  z2.csv
python/dm/dddm/: generate_p0.py  init.py  plot_chain.py  plot_chain_again.py  plot_corner.py  plot_fitting.py  prelim.ipynb  procedure-(1)-1.sh  procedure-(1)-2.sh  procedure-(2)-1.sh  procedure-(2)-2.sh  run_mcmc.py  run_mcmc_again.py
python/dm/dm/: data1.ipynb  generate_p0.py  init.py  plot_chain.py  plot_chain_again.py  plot_corner.py  plot_fitting.py  procedure-(1)-1.sh  procedure-(1)-2.sh  procedure-(2)-1.sh  procedure-(2)-2.sh  run_mcmc.py  run_mcmc_again.py
python/dm/no/: data1.ipynb  data2.ipynb  generate_p0.py  init.py  plot_chain.py  plot_chain_again.py  plot_corner.py  plot_fitting.py  procedure-(1)-1.sh  procedure-(1)-2.sh  procedure-(2)-1.sh  procedure-(2)-2.sh  procedure-2.sh  run_mcmc.py  run_mcmc_again.py
python/mcmc/: __init__.py  dddm.py  dm.py  line.py  no.py  utils.py
src/: ensemble.rs  gravity.rs  lib.rs  prob.rs  utils.rs
src/gravity/: dm.rs
src/gravity/prob/: dm.rs
src/model/: mod.rs
src/model/dddm/: gravity.rs  mod.rs  prob.rs
src/stats/: mod.rs  normal.rs  uniform.rs
src/utils/: method.rs  mod.rs
(+11 files in other folders)
